velomorph-derive/tests/ui/malformed_default_on_option.stderr
error: `default` is only valid for strict Option<T> -> T mappings.
  --> tests/ui/malformed_default_on_option.rs:10:5
   |
10 |     #[morph(default)]
   |     ^
